k8k/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: production

spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend

        image: 443915510355.dkr.ecr.ap-south-1.amazonaws.com/backend:latest

        ports:
        - containerPort: 3000

        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"

          limits:
            memory: "1Gi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /health
            port: 3000

          initialDelaySeconds: 10
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 3000

          initialDelaySeconds: 20
          periodSeconds: 10
