k8k/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: production

spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: 443915510355.dkr.ecr.ap-south-1.amazonaws.com/frontend:latest

        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"

          limits:
            memory: "512Mi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 10
          periodSeconds: 5
