k8k/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: production

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - port: 3000
      targetPort: 3000
