k8k/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: production-ingress
  namespace: production

  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
    - hosts:
        - ai-project.venkateshkumar.cloud
      secretName: tls-secret

  rules:
    - host: ai-project.venkateshkumar.cloud

      http:
        paths:

          # Backend
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 3000

          # Frontend
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80
